--- a/front_end/index.html
+++ b/front_end/index.html
@@ -7,10 +7,7 @@
 		<link rel="stylesheet" href="css/app.css">
 	</head>
 	<body>
-		<section id="todoapp"></section>
-		<footer id="info">
-			<p>Double-click to edit a todo</p>
-		</footer>
+		<section id="dictator"></section>
 		<script src="js/bundle.js"></script>
 	</body>
 </html>
