Further in progress

--- a/front_end/index.html
+++ b/front_end/index.html
@@ -2,9 +2,8 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
-		<title>to do</title>
-		<link rel="stylesheet" href="todomvc-common/base.css">
-		<link rel="stylesheet" href="css/app.css">
+		<title>dictator</title>
+		<link rel="stylesheet" href="css/style.css">
 	</head>
 	<body>
 		<section id="dictator"></section>
