--- a/jquery_front/md_out.html
+++ b/jquery_front/md_out.html
@@ -28,19 +28,19 @@
 
 
     <div id="right">
-      <div class="block hidden" id="block1">
+      <div class="block" id="block1">
           <p>An <b>affine isometry</b> is an affine transformation \( \mathbb{R}^n \to \mathbb{R}^n\) which is also an isometry.</p>
       </div>
 
-      <div class="block hidden" id="block2">
+      <div class="block" id="block2">
           <p>A <b>translation</b> is any function \( \mathbb{R}^n \to \mathbb{R}^n \) defined by \(x \mapsto x + v\) for some \(v \in \mathbb{R}^n \).</p>
       </div>
 
-      <div class="block hidden" id="block3">
+      <div class="block" id="block3">
           <p>A <b>central isometry</b> is an isometry of \( \mathbb{R}^n \) that fixes the origin.</p>
       </div>
 
-      <div class="block hidden" id="block4">
+      <div class="block" id="block4">
           <p>The collection of affine isometries on \( \mathbb{R}^n \) is exactly the collection of compositions \( t \circ k \) where \( t \) is a translation of \( \mathbb{R}^n \) and \( k \) is a central isometry.</p>
 
           <p><i>Proof:</i> blah blah blah math goes here. \( \Box \)</p>
